Separate defining new shape examples

--- a/demo.html
+++ b/demo.html
@@ -8,16 +8,10 @@
 
 <link rel="stylesheet" href="main.css">
 
+<div id="headline">Try drawing a circle, connecting two shapes, or scribbling one out!</div>
 <div id="editor"></div>
 <div id="graph_viz"></div>
 
-<script src="sketch.js"></script>
 <script src="graffle.js"></script>
-<!---
-<script src="layout.js"></script>
-<script type="text/javascript" src="json2.min.js"></script>
-
-<div id="sketchpad_editor" width="640" height="480", class="widget"></div>
-<div id="sketchpad_viewer" width="640" height="480", class="widget"></div>
-<div id="holder" width="640" height="480"></div>
-    --->
+<script src="sketch.js"></script>
+<script src="strokes.js"></script>
