Allow scratching out lines

--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,10 @@
 
 <link rel="stylesheet" href="main.css">
 
-<div id="headline">Try drawing a circle, connecting two shapes, or scribbling one out!</div>
+<div id="headline">Try drawing a circle, connecting two shapes, or scribbling one out!
+
+  It might take a few tries to get right.
+</div>
 <div id="editor"></div>
 <div id="graph_viz"></div>
 
